commafeed/ingressroute.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: commafeed
  namespace: commafeed-k8s
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`rss.valentinus.dev`)
      priority: 10
      services:
        - kind: Service
          name: commafeed-main
          namespace: commafeed-k8s
          passHostHeader: true
          port: 80
          scheme: http
  tls:
    domains:
      - main: rss.valentinus.dev
    secretName: wildcard-valentinus.dev-tls
